2002-12-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03600] Re: meta refresh
	* main.c (main): move add_download_list

2002-12-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03598] restore cursor when download list panel is updated.
	* main.c (stopDownload): delete->replace
		(ldDL): use DownloadListBuffer()

2002-12-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03597] Re: meta refresh
	* main.c (Event): next, linked list
		(N_EVENT_QUEUE): deleted
		(eventQueue): deleted
		(n_event_queue): deleted
		(CurrentEvent): added
		(main): event processing, add CurrentEvent linked list
		(pushEvent): add Event to CurrentEvent
		(SigAlarm): Currentbuf->event
	* proto.h (pushEvent): rename args

2002-12-25  Hiroaki Shimotsu <shim@d5.bs1.fc.nec.co.jp>

	* [w3m-dev 03596] LIST
	* anchor.c (link_list_panel): check internal

2002-12-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03595] tolower, toupper
	* Str.c (Strlower): TOLOWER
		(Strupper): TOUPPER
	* backend.c: delete ctype.h
	* etc.c (gethtmlcmd): TOLOWER
	* file.c (readHeader): TOLOWER
		(checkOverWrite): TOLOWER
		(guess_charset): TOLOWER
	* ftp.c: delete ctype.h
	* indep.c (strcasecmp): TOLOWER
		(strncasecmp): TOLOWER
		(strcasematch): TOLOWER
	* istream.c: include myctype.h
		(ssl_get_certificate): TOLOWER
	* mailcap.c (mailcapMatch): TOLOWER
	* main.c (_quitfm): TOLOWER
	* menu.c (accesskey_menu): TOLOWER
	* mimehead.c: include myctype.h
		(decodeWord): TOUPPER
	* mktable.c: delete ctype.h, include myctype.h
		(main): IS_SPACE
	* myctype.h: delete ctype.h
		(TOLOWER): added
		(TOUPPER): added
	* parsetagx.c (parse_tag): TOLOWER
	* rc.c (str_to_bool): TOLOWER
		(str_to_color): TOLOWER
	* regex.c: delete ctype.h, include myctype.h
		(TOLOWER): added
		(TOUPPER): added
		(regmatch1): TOLOWER
		(matchWhich): TOLOWER, TOUPPER

2002-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* mimehead.c (decodeWord): don't use toupper() (requires ctype.h)
