@@ -1,5 +1,11 @@
 2002-12-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03601] Re: meta refresh
+	* main.c (LastEvent): added
+		(pushEvent): add to LastEvent
+
+2002-12-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03600] Re: meta refresh
 	* main.c (main): move add_download_list
 
@@ -6073,4 +6079,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.646 2002/12/25 16:05:08 ukai Exp $
+$Id: ChangeLog,v 1.647 2002/12/25 16:06:43 ukai Exp $
